<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PreviewActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="always"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </androidx.viewpager2.widget.ViewPager2>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/preview_margin_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            app:tabGravity="center"
            app:tabBackground="@drawable/tab_selector"
            app:tabIndicatorHeight="0dp"
            tools:ignore="SpeakableTextPresentCheck">
        </com.google.android.material.tabs.TabLayout>

        <Button
            android:id="@+id/button_preview_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/preview_height"
            android:layout_marginStart="@dimen/preview_margin_start"
            android:layout_marginEnd="@dimen/preview_margin_end"
            android:backgroundTint="@color/but_preview"
            android:text="@string/start"
            app:cornerRadius="@dimen/preview_bottom_radius" />

        <TextView
            android:id="@+id/text_preview_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/preview_text_size"
            android:text="@string/skip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/preview_margin_top"
            android:gravity="center"
            android:text="@string/accept_privacy" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>